# workshop-pytest

./: .gitignore  feedback.txt  outline.md  pyproject.toml  setup.cfg  slides.txt
tinyurls/: manage.py
tinyurls/shorts/: forms.py  models.py  tests.py  views.py
tinyurls/shorts/migrations/: 0001_initial.py  0002_auto_20201119_1410.py
tinyurls/tinyurls/: asgi.py  settings.py  urls.py  wsgi.py
