[tool.poetry]
name = "workshop-pytest"
version = "0.1.0"
description = ""
authors = ["Denis Lesnov <denis@lesnov.me>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
pytest = "^6.1.2"
pytest-django = "^4.1.0"
pytest-factoryboy = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
